--- a/sass/base/_general.sass
+++ b/sass/base/_general.sass
@@ -1,4 +1,9 @@
+body
+	// font-family: 'Montserrat', sans-serif
+	font-family: 'Open Sans', sans-serif
+
 .container
-    width: 1140px
-    margin: 0 auto
-    padding: 0 15px
+	width: 1140px
+	margin: 0 auto
+	padding: 0 15px
+
