--- a/sass/base/_reset.sass
+++ b/sass/base/_reset.sass
@@ -8,8 +8,8 @@ html
 	box-sizing: inherit
 
 
-ul[class],
-ol[class] 
+ul,
+ol 
 	padding: 0
 
 
@@ -32,12 +32,11 @@ dd
 	margin: 0
 
 
-ul[class] 
+ul
 	list-style: none
 
 
 img 
-	max-width: 100%
 	display: block
 
 
