--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,3 +1,9 @@
 @import "base/reset"
 @import "base/general"
+@import "blocks/promo"
+@import "blocks/button"
+@import "blocks/possibilities"
+@import "blocks/title"
+@import "blocks/start"
+@import "blocks/footer"
 @import "base/media"
